src/compiler/es/weso/shexlc/parse/generated/ShexLiteParser.java
// ------------------------------------------------------------------------------
// File: ShexLiteParser.java
//
// Short version for non-lawyers:
//
// The ShEx Lite Project is dual-licensed under GNU 3.0 and
// MIT terms.
//
// Longer version:
//
// Copyrights in the ShEx Lite project are retained by their contributors. No
// copyright assignment is required to contribute to the ShEx Lite project.
//
// Some files include explicit copyright notices and/or license notices.
// For full authorship information, see the version control history.
//
// Except as otherwise noted (below and/or in individual files), ShEx Lite is
// licensed under the GNU, Version 3.0 <LICENSE-GNU> or
// <https://choosealicense.com/licenses/gpl-3.0/> or the MIT license
// <LICENSE-MIT> or <http://opensource.org/licenses/MIT>, at your option.
// In case of incompatibility between project licenses, GNU/GPLv3 will be
// applied.
//
// The ShEx Lite Project includes packages written by third parties.
// ------------------------------------------------------------------------------

// Generated from
// C:/Users/Willy/Documents/github/thewilly/shex-lite/src/compiler/es/weso/shexlc/grammar\ShexLiteParser.g4 by ANTLR 4.8
package es.weso.shexlc.parse.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShexLiteParser extends Parser {
  public static final int ANYTYPE = 1,
      BASE = 2,
      BNODE = 3,
      IRI = 4,
      LITERAL = 5,
      NONLITERAL = 6,
      PREFIX = 7,
      START = 8,
      IMPORT = 9,
      STRING_LITERAL = 10,
      STATIC_STRING_LITERAL = 11,
      IRI_LITERAL = 12,
      DECIMAL_LITERAL = 13,
      FLOAT_LITERAL = 14,
      LPAREN = 15,
      RPAREN = 16,
      LBRACE = 17,
      RBRACE = 18,
      LBRACK = 19,
      RBRACK = 20,
      SEMI = 21,
      COLON = 22,
      COMMA = 23,
      AT = 24,
      ADD = 25,
      EQ = 26,
      MUL = 27,
      QUESTION = 28,
      COMMENT = 29,
      WHITE_SPACE = 30,
      IDENTIFIER = 31;
  public static final int RULE_schema = 0,
      RULE_statement = 1,
      RULE_import_stmt = 2,
      RULE_definition_stmt = 3,
      RULE_start_def_stmt = 4,
      RULE_prefix_def_stmt = 5,
      RULE_base_def_stmt = 6,
      RULE_shape_def_stmt = 7,
      RULE_expression = 8,
      RULE_literal_expr = 9,
      RULE_literal_real_value_expr = 10,
      RULE_literal_string_value_expr = 11,
      RULE_literal_iri_value_expr = 12,
      RULE_cardinality_expr = 13,
      RULE_constraint_expr = 14,
      RULE_constraint_node_expr = 15,
      RULE_constraint_block_triple_expr = 16,
      RULE_constraint_triple_expr = 17,
      RULE_constraint_node_iri_expr = 18,
      RULE_constraint_valid_value_set_type = 19,
      RULE_constraint_node_any_type_expr = 20,
      RULE_constraint_node_non_literal_expr = 21,
      RULE_constraint_value_set_expr = 22,
      RULE_constraint_node_bnode_expr = 23,
      RULE_constraint_node_literal_expr = 24,
      RULE_call_expr = 25,
      RULE_call_prefix_expr = 26,
      RULE_call_shape_expr = 27;
  public static final String[] ruleNames = makeRuleNames();
  /** @deprecated Use {@link #VOCABULARY} instead. */
  @Deprecated public static final String[] tokenNames;

  public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  private static final String[] _LITERAL_NAMES = makeLiteralNames();
  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  static {
    RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
  }

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }

  public ShexLiteParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  private static String[] makeRuleNames() {
    return new String[] {
      "schema",
      "statement",
      "import_stmt",
      "definition_stmt",
      "start_def_stmt",
      "prefix_def_stmt",
      "base_def_stmt",
      "shape_def_stmt",
      "expression",
      "literal_expr",
      "literal_real_value_expr",
      "literal_string_value_expr",
      "literal_iri_value_expr",
      "cardinality_expr",
      "constraint_expr",
      "constraint_node_expr",
      "constraint_block_triple_expr",
      "constraint_triple_expr",
      "constraint_node_iri_expr",
      "constraint_valid_value_set_type",
      "constraint_node_any_type_expr",
      "constraint_node_non_literal_expr",
      "constraint_value_set_expr",
      "constraint_node_bnode_expr",
      "constraint_node_literal_expr",
      "call_expr",
      "call_prefix_expr",
      "call_shape_expr"
    };
  }

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "'.'",
      "'base'",
      "'bnode'",
      "'iri'",
      "'literal'",
      "'nonliteral'",
      "'prefix'",
      "'start'",
      "'import'",
      null,
      null,
      null,
      null,
      null,
      "'('",
      "')'",
      "'{'",
      "'}'",
      "'['",
      "']'",
      "';'",
      "':'",
      "','",
      "'@'",
      "'+'",
      "'='",
      "'*'",
      "'?'"
    };
  }

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      "ANYTYPE",
      "BASE",
      "BNODE",
      "IRI",
      "LITERAL",
      "NONLITERAL",
      "PREFIX",
      "START",
      "IMPORT",
      "STRING_LITERAL",
      "STATIC_STRING_LITERAL",
      "IRI_LITERAL",
      "DECIMAL_LITERAL",
      "FLOAT_LITERAL",
      "LPAREN",
      "RPAREN",
      "LBRACE",
      "RBRACE",
      "LBRACK",
      "RBRACK",
      "SEMI",
      "COLON",
      "COMMA",
      "AT",
      "ADD",
      "EQ",
      "MUL",
      "QUESTION",
      "COMMENT",
      "WHITE_SPACE",
      "IDENTIFIER"
    };
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "ShexLiteParser.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public final SchemaContext schema() throws RecognitionException {
    SchemaContext _localctx = new SchemaContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_schema);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(57);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(56);
              statement();
            }
          }
          setState(59);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ((((_la) & ~0x3f) == 0
            && ((1L << _la)
                    & ((1L << BASE)
                        | (1L << PREFIX)
                        | (1L << START)
                        | (1L << IMPORT)
                        | (1L << IRI_LITERAL)
                        | (1L << COLON)
                        | (1L << IDENTIFIER)))
                != 0));
        setState(61);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final StatementContext statement() throws RecognitionException {
    StatementContext _localctx = new StatementContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_statement);
    try {
      setState(65);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IMPORT:
          enterOuterAlt(_localctx, 1);
          {
            setState(63);
            import_stmt();
          }
          break;
        case BASE:
        case PREFIX:
        case START:
        case IRI_LITERAL:
        case COLON:
        case IDENTIFIER:
          enterOuterAlt(_localctx, 2);
          {
            setState(64);
            definition_stmt();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Import_stmtContext import_stmt() throws RecognitionException {
    Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_import_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(67);
        match(IMPORT);
        setState(68);
        ((Import_stmtContext) _localctx).iri = literal_iri_value_expr();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Definition_stmtContext definition_stmt() throws RecognitionException {
    Definition_stmtContext _localctx = new Definition_stmtContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_definition_stmt);
    try {
      setState(74);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case START:
          enterOuterAlt(_localctx, 1);
          {
            setState(70);
            start_def_stmt();
          }
          break;
        case PREFIX:
          enterOuterAlt(_localctx, 2);
          {
            setState(71);
            prefix_def_stmt();
          }
          break;
        case BASE:
          enterOuterAlt(_localctx, 3);
          {
            setState(72);
            base_def_stmt();
          }
          break;
        case IRI_LITERAL:
        case COLON:
        case IDENTIFIER:
          enterOuterAlt(_localctx, 4);
          {
            setState(73);
            shape_def_stmt();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Start_def_stmtContext start_def_stmt() throws RecognitionException {
    Start_def_stmtContext _localctx = new Start_def_stmtContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_start_def_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(76);
        match(START);
        setState(77);
        match(EQ);
        setState(78);
        ((Start_def_stmtContext) _localctx).shape = call_shape_expr();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Prefix_def_stmtContext prefix_def_stmt() throws RecognitionException {
    Prefix_def_stmtContext _localctx = new Prefix_def_stmtContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_prefix_def_stmt);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(80);
        match(PREFIX);
        setState(82);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == IDENTIFIER) {
          {
            setState(81);
            match(IDENTIFIER);
          }
        }

        setState(84);
        match(COLON);
        setState(85);
        ((Prefix_def_stmtContext) _localctx).iri = literal_iri_value_expr();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Base_def_stmtContext base_def_stmt() throws RecognitionException {
    Base_def_stmtContext _localctx = new Base_def_stmtContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_base_def_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(87);
        match(BASE);
        setState(88);
        ((Base_def_stmtContext) _localctx).iri = literal_iri_value_expr();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Shape_def_stmtContext shape_def_stmt() throws RecognitionException {
    Shape_def_stmtContext _localctx = new Shape_def_stmtContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_shape_def_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(90);
        ((Shape_def_stmtContext) _localctx).label = call_prefix_expr();
        setState(91);
        ((Shape_def_stmtContext) _localctx).expr = constraint_expr();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final ExpressionContext expression() throws RecognitionException {
    ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_expression);
    try {
      setState(96);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(93);
            literal_expr();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(94);
            cardinality_expr();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(95);
            constraint_expr();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Literal_exprContext literal_expr() throws RecognitionException {
    Literal_exprContext _localctx = new Literal_exprContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_literal_expr);
    try {
      setState(101);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case DECIMAL_LITERAL:
          enterOuterAlt(_localctx, 1);
          {
            setState(98);
            literal_real_value_expr();
          }
          break;
        case STRING_LITERAL:
          enterOuterAlt(_localctx, 2);
          {
            setState(99);
            literal_string_value_expr();
          }
          break;
        case IRI_LITERAL:
          enterOuterAlt(_localctx, 3);
          {
            setState(100);
            literal_iri_value_expr();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Literal_real_value_exprContext literal_real_value_expr()
      throws RecognitionException {
    Literal_real_value_exprContext _localctx = new Literal_real_value_exprContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_literal_real_value_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(103);
        match(DECIMAL_LITERAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Literal_string_value_exprContext literal_string_value_expr()
      throws RecognitionException {
    Literal_string_value_exprContext _localctx =
        new Literal_string_value_exprContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_literal_string_value_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(105);
        match(STRING_LITERAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Literal_iri_value_exprContext literal_iri_value_expr() throws RecognitionException {
    Literal_iri_value_exprContext _localctx = new Literal_iri_value_exprContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_literal_iri_value_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(107);
        match(IRI_LITERAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Cardinality_exprContext cardinality_expr() throws RecognitionException {
    Cardinality_exprContext _localctx = new Cardinality_exprContext(_ctx, getState());
    enterRule(_localctx, 26, RULE_cardinality_expr);
    try {
      setState(124);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(109);
            match(MUL);
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(110);
            match(ADD);
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(111);
            match(QUESTION);
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(112);
            match(LBRACE);
            setState(113);
            ((Cardinality_exprContext) _localctx).min = match(DECIMAL_LITERAL);
            setState(114);
            match(RBRACE);
          }
          break;
        case 5:
          enterOuterAlt(_localctx, 5);
          {
            setState(115);
            match(LBRACE);
            setState(116);
            ((Cardinality_exprContext) _localctx).min = match(DECIMAL_LITERAL);
            setState(117);
            match(COMMA);
            setState(118);
            ((Cardinality_exprContext) _localctx).max = match(DECIMAL_LITERAL);
            setState(119);
            match(RBRACE);
          }
          break;
        case 6:
          enterOuterAlt(_localctx, 6);
          {
            setState(120);
            match(LBRACE);
            setState(121);
            ((Cardinality_exprContext) _localctx).min = match(DECIMAL_LITERAL);
            setState(122);
            match(COMMA);
            setState(123);
            match(RBRACE);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_exprContext constraint_expr() throws RecognitionException {
    Constraint_exprContext _localctx = new Constraint_exprContext(_ctx, getState());
    enterRule(_localctx, 28, RULE_constraint_expr);
    try {
      setState(129);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(126);
            constraint_node_expr();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(127);
            constraint_block_triple_expr();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(128);
            constraint_triple_expr();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_exprContext constraint_node_expr() throws RecognitionException {
    Constraint_node_exprContext _localctx = new Constraint_node_exprContext(_ctx, getState());
    enterRule(_localctx, 30, RULE_constraint_node_expr);
    try {
      setState(139);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(131);
            constraint_node_iri_expr();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(132);
            constraint_valid_value_set_type();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(133);
            constraint_node_any_type_expr();
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(134);
            call_expr();
          }
          break;
        case 5:
          enterOuterAlt(_localctx, 5);
          {
            setState(135);
            constraint_node_non_literal_expr();
          }
          break;
        case 6:
          enterOuterAlt(_localctx, 6);
          {
            setState(136);
            constraint_value_set_expr();
          }
          break;
        case 7:
          enterOuterAlt(_localctx, 7);
          {
            setState(137);
            constraint_node_bnode_expr();
          }
          break;
        case 8:
          enterOuterAlt(_localctx, 8);
          {
            setState(138);
            constraint_node_literal_expr();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_block_triple_exprContext constraint_block_triple_expr()
      throws RecognitionException {
    Constraint_block_triple_exprContext _localctx =
        new Constraint_block_triple_exprContext(_ctx, getState());
    enterRule(_localctx, 32, RULE_constraint_block_triple_expr);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(141);
        match(LBRACE);
        setState(143);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(142);
              constraint_triple_expr();
            }
          }
          setState(145);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << IRI_LITERAL) | (1L << COLON) | (1L << IDENTIFIER))) != 0));
        setState(147);
        match(RBRACE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_triple_exprContext constraint_triple_expr() throws RecognitionException {
    Constraint_triple_exprContext _localctx = new Constraint_triple_exprContext(_ctx, getState());
    enterRule(_localctx, 34, RULE_constraint_triple_expr);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(149);
        ((Constraint_triple_exprContext) _localctx).property = call_prefix_expr();
        setState(150);
        ((Constraint_triple_exprContext) _localctx).constraint = constraint_node_expr();
        setState(152);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if ((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << LBRACE) | (1L << ADD) | (1L << MUL) | (1L << QUESTION)))
                != 0)) {
          {
            setState(151);
            ((Constraint_triple_exprContext) _localctx).cardinality = cardinality_expr();
          }
        }

        setState(155);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == SEMI) {
          {
            setState(154);
            match(SEMI);
          }
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_iri_exprContext constraint_node_iri_expr()
      throws RecognitionException {
    Constraint_node_iri_exprContext _localctx =
        new Constraint_node_iri_exprContext(_ctx, getState());
    enterRule(_localctx, 36, RULE_constraint_node_iri_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(157);
        match(IRI);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_valid_value_set_typeContext constraint_valid_value_set_type()
      throws RecognitionException {
    Constraint_valid_value_set_typeContext _localctx =
        new Constraint_valid_value_set_typeContext(_ctx, getState());
    enterRule(_localctx, 38, RULE_constraint_valid_value_set_type);
    try {
      setState(163);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IRI_LITERAL:
        case COLON:
        case IDENTIFIER:
          enterOuterAlt(_localctx, 1);
          {
            setState(159);
            call_prefix_expr();
          }
          break;
        case AT:
          enterOuterAlt(_localctx, 2);
          {
            setState(160);
            call_shape_expr();
          }
          break;
        case STRING_LITERAL:
          enterOuterAlt(_localctx, 3);
          {
            setState(161);
            literal_string_value_expr();
          }
          break;
        case DECIMAL_LITERAL:
          enterOuterAlt(_localctx, 4);
          {
            setState(162);
            literal_real_value_expr();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_any_type_exprContext constraint_node_any_type_expr()
      throws RecognitionException {
    Constraint_node_any_type_exprContext _localctx =
        new Constraint_node_any_type_exprContext(_ctx, getState());
    enterRule(_localctx, 40, RULE_constraint_node_any_type_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(165);
        match(ANYTYPE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_non_literal_exprContext constraint_node_non_literal_expr()
      throws RecognitionException {
    Constraint_node_non_literal_exprContext _localctx =
        new Constraint_node_non_literal_exprContext(_ctx, getState());
    enterRule(_localctx, 42, RULE_constraint_node_non_literal_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(167);
        match(NONLITERAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_value_set_exprContext constraint_value_set_expr()
      throws RecognitionException {
    Constraint_value_set_exprContext _localctx =
        new Constraint_value_set_exprContext(_ctx, getState());
    enterRule(_localctx, 44, RULE_constraint_value_set_expr);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(169);
        match(LBRACK);
        setState(173);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0
            && ((1L << _la)
                    & ((1L << STRING_LITERAL)
                        | (1L << IRI_LITERAL)
                        | (1L << DECIMAL_LITERAL)
                        | (1L << COLON)
                        | (1L << AT)
                        | (1L << IDENTIFIER)))
                != 0)) {
          {
            {
              setState(170);
              constraint_valid_value_set_type();
            }
          }
          setState(175);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(176);
        match(RBRACK);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_bnode_exprContext constraint_node_bnode_expr()
      throws RecognitionException {
    Constraint_node_bnode_exprContext _localctx =
        new Constraint_node_bnode_exprContext(_ctx, getState());
    enterRule(_localctx, 46, RULE_constraint_node_bnode_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(178);
        match(BNODE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Constraint_node_literal_exprContext constraint_node_literal_expr()
      throws RecognitionException {
    Constraint_node_literal_exprContext _localctx =
        new Constraint_node_literal_exprContext(_ctx, getState());
    enterRule(_localctx, 48, RULE_constraint_node_literal_expr);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(180);
        match(LITERAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final Call_exprContext call_expr() throws RecognitionException {
    Call_exprContext _localctx = new Call_exprContext(_ctx, getState());
    enterRule(_localctx, 50, RULE_call_expr);
    try {
      setState(184);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IRI_LITERAL:
        case COLON:
        case IDENTIFIER:
          enterOuterAlt(_localctx, 1);
          {
            setState(182);
            call_prefix_expr();
          }
          break;
        case AT:
          enterOuterAlt(_localctx, 2);
          {
            setState(183);
            call_shape_expr();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
